# OpenAce

./: .gitignore  .gitmodules  README.md
.github/: FUNDING.yml  develop.md  production.md  release.md
.github/actions/build_project/: action.yml
.github/actions/setup_env/: action.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  develop.yml  release.yml
OpenACE V0.0.2/: .gitignore  OpenACE V0.0.2.kicad_pcb  OpenACE V0.0.2.kicad_prl  OpenACE V0.0.2.kicad_pro  OpenACE V0.0.2.kicad_sch  OpenACE V0.0.2.xml  README.md  fp-info-cache  fp-lib-table  freerouting.dsn  hat.kicad_sch  peripherals.kicad_sch  sym-lib-table
enclosure/: 868Mhz-antenna-array.scad  README.md  gps-antenna-holder.json  gps-antenna-holder.scad  openace_v0.0.2.json  openace_v0.0.2.scad  parts.scad
src/: CMakeLists.txt  Dockerfile
src/SystemGUI/: .editorconfig  .parcelrcrelease  .proxyrc.js  package.json  readme.md
src/SystemGUI/captive/: captive.html  generate_204  hotspot-detect.html  ios.html
src/SystemGUI/src/: error.json  index.html
src/SystemGUI/src/components/: aircraftconfig.js  aircraftsession.js  gpsstatus.js  menu.js  moduleconfigs.js  modules.js  monitormodule.js  session.js  store.js
src/SystemGUI/src/css/: styles.scss
src/lib/: CMakeLists.txt  openace_module.cmake
src/lib/acespi/: CMakeLists.txt
src/lib/acespi/ace/: acespi.cpp  acespi.hpp
src/lib/adsbdecoder/: CMakeLists.txt  README.md
src/lib/adsbdecoder/ace/: addresscache.cpp  addresscache.hpp  adsbdatacollector.cpp  adsbdatacollector.hpp  adsbdecoder.cpp  adsbdecoder.hpp  cpr.cpp  cpr.hpp
src/lib/adsbdecoder/adsbdecoder_tests/: CMakeLists.txt  adsb_test.cpp
src/lib/adsl/: CMakeLists.txt  readme.md
src/lib/adsl/ace/: adsl.cpp  adsl.hpp  adsl_packet.hpp
src/lib/adsl/adsl_tests/: CMakeLists.txt  adsl_test.cpp
src/lib/aircrafttracker/: CMakeLists.txt
src/lib/aircrafttracker/ace/: aircrafttracker.cpp  aircrafttracker.hpp
src/lib/bmp280/: CMakeLists.txt
src/lib/bmp280/ace/: bmp280.cpp  bmp280.hpp
src/lib/config/: CMakeLists.txt
src/lib/config/ace/: config.cpp  config.hpp  configstore.hpp  flashstore.cpp  flashstore.hpp  inmemorystore.cpp  inmemorystore.hpp
src/lib/core/: CMakeLists.txt
src/lib/core/ace/: basemodule.cpp  basemodule.hpp  constants.hpp  coreutils.cpp  coreutils.hpp  messagerouter.hpp  messages.hpp  models.cpp  models.hpp  semaphoreguard.hpp
src/lib/core/core_tests/: CMakeLists.txt  coreutils_test.cpp
src/lib/dump1090Client/: CMakeLists.txt
src/lib/dump1090Client/ace/: dump1090client.cpp  dump1090client.hpp
src/lib/flarm/: CMakeLists.txt
src/lib/flarm/ace/: flarm2024.cpp  flarm2024.hpp  flarm_2023.cpp  flarm_2023.hpp  flarm_utils.cpp  flarm_utils.hpp
src/lib/flarm/flarm_tests/: CMakeLists.txt  flarm2024_test.cpp
src/lib/gdl90service/: CMakeLists.txt
src/lib/gdl90service/ace/: gdl90service.cpp  gdl90service.hpp
src/lib/gdloverudp/: CMakeLists.txt
src/lib/gdloverudp/ace/: gdloverudp.cpp  gdloverudp.hpp
src/lib/gpsdecoder/: CMakeLists.txt
src/lib/gpsdecoder/ace/: gpsdecoder.cpp  gpsdecoder.hpp
src/lib/include/: FreeRTOSConfig.h  lwipopts.h  lwipopts_common.h
src/lib/mocks/: FreeRTOS.h  FreeRTOSconfig.h  geomock.hpp  message_buffer.h  mockconfig.h  mockconfig.hpp  mockutils.h  pico.h  queue.h  readme.md  semphr.h  task.h  timers.h
src/lib/mocks/hardware/: gpio.h  pio.h
src/lib/mocks/pico/: binary_info.h  rand.h  stdlib.h  time.h
src/lib/ogn/: CMakeLists.txt
src/lib/ogn/ace/: ogn1.cpp  ogn1.hpp  ognpacket.cpp  ognpacket.hpp
src/lib/pioserial/: CMakeLists.txt
src/lib/pioserial/ace/: pioserial.cpp  pioserial.hpp  uart_rx.pio  uart_tx.pio
src/lib/radiotuner/: CMakeLists.txt  readme.md
src/lib/radiotuner/ace/: countryregulations.cpp  countryregulations.hpp  radiotunerrx.cpp  radiotunerrx.hpp  radiotunertx.cpp  radiotunertx.hpp
src/lib/radiotuner/radiotuner_tests/: CMakeLists.txt  countryregulations_test.cpp  radiotunerrx_test.cpp
src/lib/rtc/: CMakeLists.txt
src/lib/rtc/ace/: picortc.cpp  picortc.hpp
src/lib/serialadsb/: CMakeLists.txt
src/lib/serialadsb/ace/: serialadsb.cpp  serialadsb.hpp
src/lib/sx1262/: CMakeLists.txt
src/lib/sx1262/ace/: sx1262.cpp  sx1262.hpp  sx1262_hal.cpp
src/lib/sx1262/driver/src/: lr_fhss_mac.c  lr_fhss_mac.h  sx126x.c  sx126x.h  sx126x_hal.h  sx126x_lr_fhss.c  sx126x_lr_fhss.h
src/lib/tcpclient/: CMakeLists.txt
src/lib/tcpclient/ace/: tcpclient.cpp  tcpclient.hpp
src/lib/ubloxm8n/: CMakeLists.txt
src/lib/ubloxm8n/ace/: ubloxm8n.cpp  ubloxm8n.hpp
src/lib/utils/: CMakeLists.txt
src/lib/utils/ace/: EMA.cpp  EMA.hpp  bitcount.cpp  bitcount.hpp  encryption.cpp  encryption.hpp  ldpc.cpp  ldpc.hpp  manchester.cpp  manchester.hpp  moreutils.cpp  moreutils.hpp  ognconv.cpp  ognconv.hpp  utils.cpp  utils.hpp  xorshift.hpp
src/lib/utils/utils_tests/: CMakeLists.txt  utils_test.cpp
src/lib/webserver/: CMakeLists.txt  makeFs.sh  openace_fsdata.c
src/lib/webserver/ace/: webserver.cpp  webserver.hpp
src/lib/wifiservice/: CMakeLists.txt
src/lib/wifiservice/ace/: wifiservice.cpp  wifiservice.hpp
src/lib/wifiservice/dhcpserver/: dhcpserver.c  dhcpserver.h
src/lib/wifiservice/dnsserver/: dnsserver.c  dnsserver.h
src/pico/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  IdleMemory.c  config.hpp.in  lwipopts.h  main.cpp  ninja.sh  openace_default_config.json
